Updated Changelog to have proper format, added changelog to Sphinx docs, and updated docs.

--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -174,14 +174,14 @@ releases:
           plugin, but in different contexts so no collision will arise, but confusion
           will.
 
-          I renamed the lookup plugin to `nb_lookup` so it will be used with the FQCN
+          I renamed the lookup plugin to ``nb_lookup`` so it will be used with the FQCN
           ``netbox.netbox.nb_lookup``.
 
           The inventory plugin will now be called within an inventory file by ``netbox.netbox.nb_inventory``
 
           "
       bugfixes:
-        - Update netbox_tenant and netbox_tenant_group to use slugs for searching (available
+        - Update ``netbox_tenant`` and ``netbox_tenant_group`` to use slugs for searching (available
           since NetBox 2.6). Added slug options to netbox_site, netbox_tenant, netbox_tenant_group
           (https://github.com/netbox-community/ansible_modules/pull/120)
   0.2.0:
@@ -235,10 +235,10 @@ releases:
     changes:
       bugfixes:
         - Added ``type`` to ``ALLOWED_QUERY_PARAMS`` for interface searches (https://github.com/netbox-community/ansible_modules/issues/208)
-        - Added `interfaces` to `ALLOWED_QUERY_PARAMS` for ip addresses searches (https://github.com/netbox-community/ansible_modules/issues/201)
-        - Remove `rack` as a choice when createing virtual machines (https://github.com/netbox-community/ansible_modules/pull/221)
+        - Added ``interfaces`` to ``ALLOWED_QUERY_PARAMS`` for ip addresses searches (https://github.com/netbox-community/ansible_modules/issues/201)
+        - Remove ``rack`` as a choice when creating virtual machines (https://github.com/netbox-community/ansible_modules/pull/221)
       minor_changes:
-        - Changed ``validate_certs`` to ``raw1` to allow private keys to be passed in
+        - Changed ``validate_certs`` to ``raw`` to allow private keys to be passed in
           (https://github.com/netbox-community/ansible_modules/issues/211)
   0.2.3:
     changes:
@@ -253,10 +253,10 @@ releases:
         - Adds ``discovered`` field to ``netbox_inventory_item`` (https://github.com/netbox-community/ansible_modules/issues/187)
         - Adds ``query_params`` to all modules to allow users to define the ``query_params``
           (https://github.com/netbox-community/ansible_modules/issues/215)
-        - Adds ``tenant`` field to `netbox_cluster` (https://github.com/netbox-community/ansible_modules/pull/219)
+        - Adds ``tenant`` field to ``netbox_cluster`` (https://github.com/netbox-community/ansible_modules/pull/219)
         - Allows private key to be passed in to ``validate_certs`` within modules (https://github.com/netbox-community/ansible_modules/issues/216)
         - Better error handling if read-only token is provided for modules. Updated
-          README as well to say that a `write-enabled` token is required (https://github.com/netbox-community/ansible_modules/pull/238)
+          README as well to say that a ``write-enabled`` token is required (https://github.com/netbox-community/ansible_modules/pull/238)
     modules:
       - description: Create, update or delete console ports within Netbox
         name: netbox_console_port
@@ -314,19 +314,19 @@ releases:
 
           ::
 
-          tasks:
-            - name: Create device within NetBox with only required information
-              netbox_device:
-                netbox_url: http://netbox-demo.org:32768
-                netbox_token: 0123456789abcdef0123456789abcdef01234567
-                data:
-                  name: Test66
-                  device_type:
-                    id: "{{ some_jinja_variable }}"
-                  device_role: Core Switch
-                  site: Test Site
-                  status: Staged
-                state: present
+            tasks:
+              - name: Create device within NetBox with only required information
+                netbox_device:
+                  netbox_url: http://netbox-demo.org:32768
+                  netbox_token: 0123456789abcdef0123456789abcdef01234567
+                  data:
+                    name: Test66
+                    device_type:
+                      id: "{{ some_jinja_variable }}"
+                    device_role: Core Switch
+                    site: Test Site
+                    status: Staged
+                  state: present
 
         - |
           ``pynetbox`` changed to using ``requests.Session()`` to manage the HTTP session
