Forgot to add the ignore_errors: yes and push

--- a/tests/integration/targets/latest/tasks/netbox_service.yml
+++ b/tests/integration/targets/latest/tasks/netbox_service.yml
@@ -160,6 +160,7 @@
       ipaddresses:
         - address: "172.16.180.1/24"
     state: present
+  ignore_errors: yes
   register: test_service_required_one_of
 
 - name: "NETBOX_SERVICE ASSERT - Failed due to missing arguments"
