Leaving tags as a list of strings, and then convert to slug and search for tags by slug as it's unique

--- a/tests/integration/targets/latest/tasks/netbox_cluster.yml
+++ b/tests/integration/targets/latest/tasks/netbox_cluster.yml
@@ -54,7 +54,7 @@
       comments: "Updated cluster"
       tenant: "Test Tenant"
       tags:
-        - name: "Schnozzberry"
+        - "Schnozzberry"
     state: present
   register: test_three
 
