--- a/tests/integration/targets/latest/tasks/netbox_device.yml
+++ b/tests/integration/targets/latest/tasks/netbox_device.yml
@@ -130,7 +130,7 @@
       position: 35
       face: "Front"
       tags:
-        - slug: "schnozzberry"
+        - "schnozzberry"
       tenant: "Test Tenant"
       asset_tag: "1234"
     state: present
