--- a/tests/integration/targets/latest/tasks/netbox_device_bay.yml
+++ b/tests/integration/targets/latest/tasks/netbox_device_bay.yml
@@ -51,7 +51,7 @@
       name: "Device Bay One"
       installed_device: "Test Nexus Child One"
       tags:
-        - name: "Schnozzberry"
+        - "Schnozzberry"
     state: present
   register: test_three
 
