--- a/tests/integration/targets/latest/tasks/netbox_prefix.yml
+++ b/tests/integration/targets/latest/tasks/netbox_prefix.yml
@@ -100,7 +100,7 @@
       description: Test description
       is_pool: true
       tags:
-        - name: "Schnozzberry"
+        - "Schnozzberry"
     state: present
   register: test_five
 
