--- a/tests/integration/targets/latest/tasks/netbox_service.yml
+++ b/tests/integration/targets/latest/tasks/netbox_service.yml
@@ -69,7 +69,7 @@
       port: 9100
       protocol: TCP
       tags:
-        - name: "Schnozzberry"
+        - "Schnozzberry"
     state: present
   register: test_service_update
 
