--- a/tests/integration/targets/latest/tasks/netbox_virtual_machine.yml
+++ b/tests/integration/targets/latest/tasks/netbox_virtual_machine.yml
@@ -54,7 +54,7 @@
       status: "Planned"
       virtual_machine_role: "Test VM Role"
       tags:
-        - name: "Schnozzberry"
+        - "Schnozzberry"
     state: present
   register: test_three
 
