--- a/tests/integration/targets/latest/tasks/netbox_vlan.yml
+++ b/tests/integration/targets/latest/tasks/netbox_vlan.yml
@@ -79,7 +79,7 @@
       description: Updated description
       site: "Test Site"
       tags:
-        - name: "Schnozzberry"
+        - "Schnozzberry"
     state: present
   register: test_four
 
