--- a/tests/integration/targets/latest/tasks/netbox_vrf.yml
+++ b/tests/integration/targets/latest/tasks/netbox_vrf.yml
@@ -69,7 +69,7 @@
       tenant: "Test Tenant"
       description: Updated description
       tags:
-        - name: "Schnozzberry"
+        - "Schnozzberry"
     state: present
   register: test_four
 
