--- a/tests/integration/targets/latest/tasks/netbox_aggregate.yml
+++ b/tests/integration/targets/latest/tasks/netbox_aggregate.yml
@@ -53,7 +53,7 @@
       date_added: "1989-01-18"
       description: "Test Description"
       tags:
-        - name: "Schnozzberry"
+        - "Schnozzberry"
     state: present
   register: test_three
 
