--- a/tests/integration/targets/latest/tasks/netbox_tenant.yml
+++ b/tests/integration/targets/latest/tasks/netbox_tenant.yml
@@ -85,9 +85,9 @@
       tenant_group: "Test Tenant Group"
       slug: "tenant_abc"
       tags:
-        - name: "tagA"
-        - name: "tagB"
-        - name: "tagC"
+        - "tagA"
+        - "tagB"
+        - "tagC"
     state: present
   register: test_five
 
