--- a/tests/integration/targets/v2.8/tasks/netbox_ip_address.yml
+++ b/tests/integration/targets/v2.8/tasks/netbox_ip_address.yml
@@ -30,7 +30,7 @@
       address: 192.168.1.10/30
       description: "Updated ip address"
       tags:
-        - name: "Updated"
+        - "Updated"
     state: present
   register: test_two
 
@@ -39,10 +39,10 @@
     that:
       - test_two is changed
       - test_two['diff']['after']['description'] == "Updated ip address"
-      - test_two['diff']['after']['tags'][0] == 10
+      - test_two['diff']['after']['tags'][0] == "Updated"
       - test_two['msg'] == "ip_address 192.168.1.10/30 updated"
       - test_two['ip_address']['address'] == "192.168.1.10/30"
-      - test_two['ip_address']['tags'][0] == 10
+      - test_two['ip_address']['tags'][0] == "Updated"
       - test_two['ip_address']['description'] == "Updated ip address"
 
 - name: "3 - Delete IP - 192.168.1.10 - State: Absent"
@@ -129,7 +129,7 @@
       role: Loopback
       description: Test description
       tags:
-        - slug: schnozzberry
+        - "Schnozzberry"
     state: present
   register: test_seven
 
@@ -145,7 +145,7 @@
       - test_seven['ip_address']['family'] == 4
       - test_seven['ip_address']['role'] == "loopback"
       - test_seven['ip_address']['status'] == "reserved"
-      - test_seven['ip_address']['tags'][0] == 10
+      - test_seven['ip_address']['tags'][0] == "Schnozzberry"
       - test_seven['ip_address']['tenant'] == 1
       - test_seven['ip_address']['vrf'] == 1
 
