--- a/tests/integration/targets/latest/tasks/netbox_vrf.yml
+++ b/tests/integration/targets/latest/tasks/netbox_vrf.yml
@@ -86,7 +86,7 @@
       - test_four['vrf']['rd'] == "65001:1"
       - test_four['vrf']['enforce_unique'] == false
       - test_four['vrf']['description'] == "Updated description"
-      - test_four['vrf']['tags'][0] == "Schnozzberry"
+      - test_four['vrf']['tags'][0] == 4
       - test_four['msg'] == "vrf Test VRF One updated"
 
 - name: "VRF 5: ASSERT - Delete more than one result"
@@ -124,5 +124,5 @@
       - test_six['vrf']['rd'] == "65001:1"
       - test_six['vrf']['enforce_unique'] == false
       - test_six['vrf']['description'] == "Updated description"
-      - test_six['vrf']['tags'][0] == "Schnozzberry"
+      - test_six['vrf']['tags'][0] == 4
       - test_six['msg'] == "vrf Test VRF One deleted"
