--- a/tests/integration/targets/latest/tasks/netbox_virtual_machine.yml
+++ b/tests/integration/targets/latest/tasks/netbox_virtual_machine.yml
@@ -73,7 +73,7 @@
       - test_three['virtual_machine']['memory'] == 8
       - test_three['virtual_machine']['status'] == "planned"
       - test_three['virtual_machine']['role'] == 2
-      - test_three['virtual_machine']['tags'][0] == "Schnozzberry"
+      - test_three['virtual_machine']['tags'][0] == 4
       - test_three['msg'] == "virtual_machine Test VM One updated"
 
 - name: "VIRTUAL_MACHINE 4: ASSERT - Delete"
@@ -95,5 +95,5 @@
       - test_four['virtual_machine']['memory'] == 8
       - test_four['virtual_machine']['status'] == "planned"
       - test_four['virtual_machine']['role'] == 2
-      - test_four['virtual_machine']['tags'][0] == "Schnozzberry"
+      - test_four['virtual_machine']['tags'][0] == 4
       - test_four['msg'] == "virtual_machine Test VM One deleted"
