Rename netbox_tags module to netbox_tag for uniformity; add integration tests

--- a/tests/integration/targets/latest/tasks/main.yml
+++ b/tests/integration/targets/latest/tasks/main.yml
@@ -154,3 +154,6 @@
 
 - name: "NETBOX_LOOKUP TESTS"
   include_tasks: "netbox_lookup.yml"
+
+- name: "NETBOX_TAG_TESTS"
+  include_tasks: "netbox_tag.yml"
