--- a/tests/integration/targets/v2.8/tasks/netbox_config_context.yml
+++ b/tests/integration/targets/v2.8/tasks/netbox_config_context.yml
@@ -55,7 +55,7 @@
       description: "Updated test context"
       data: "{ \"testkey\": { \"testsubkey\": [ \"updatedvaule\" ] } }"
       weight: 100
-      sites: [ "Test Site" ]
+      sites: [ test-site ]
     state: present
   register: test_three
 
