--- a/tests/integration/targets/v2.8/tasks/netbox_vlan.yml
+++ b/tests/integration/targets/v2.8/tasks/netbox_vlan.yml
@@ -51,6 +51,7 @@
       vid: 500
       site: Test Site
       tenant: Test Tenant
+      vlan_group: "Test VLAN Group"
     state: present
   register: test_three
 
@@ -63,6 +64,7 @@
       - test_three['vlan']['name'] == "Test VLAN 500"
       - test_three['vlan']['vid'] == 500
       - test_three['vlan']['site'] == 1
+      - test_three['vlan']['group'] == 1
       - test_three['msg'] == "vlan Test VLAN 500 created"
 
 - name: "VLAN 4: ASSERT - Update"
@@ -87,7 +89,6 @@
   assert:
     that:
       - test_four is changed
-      - test_four['diff']['after']['group'] == 1
       - test_four['diff']['after']['status'] == "reserved"
       - test_four['diff']['after']['role'] == 1
       - test_four['diff']['after']['description'] == "Updated description"
@@ -101,6 +102,54 @@
       - test_four['vlan']['description'] == "Updated description"
       - test_four['vlan']['tags'][0] == "Schnozzberry"
       - test_four['msg'] == "vlan Test VLAN 500 updated"
+
+- name: "VLAN: ASSERT - IDEMPOTENT WITH VLAN_GROUP"
+  netbox.netbox.netbox_vlan:
+    netbox_url: http://localhost:32768
+    netbox_token: 0123456789abcdef0123456789abcdef01234567
+    data:
+      name: "Test VLAN 500"
+      vid: 500
+      tenant: "Test Tenant"
+      vlan_group: "Test VLAN Group"
+      status: Reserved
+      vlan_role: Network of care
+      description: Updated description
+      site: "Test Site"
+      tags:
+        - "Schnozzberry"
+    state: present
+  register: idempotent_vlan_group
+
+- name: "VLAN: ASSERT - IDEMPOTENT WITH VLAN_GROUP"
+  assert:
+    that:
+      - idempotent_vlan_group is not changed
+
+- name: "VLAN: Create VLAN with same name, but different vlan_group"
+  netbox.netbox.netbox_vlan:
+    netbox_url: http://localhost:32768
+    netbox_token: 0123456789abcdef0123456789abcdef01234567
+    data:
+      name: Test VLAN 500
+      vid: 500
+      site: Test Site
+      tenant: Test Tenant
+      vlan_group: "Test VLAN Group 2"
+    state: present
+  register: new_vlan_group
+
+- name: "VLAN: ASSERT - Create VLAN with same name, but different vlan_group"
+  assert:
+    that:
+      - new_vlan_group is changed
+      - new_vlan_group['diff']['before']['state'] == "absent"
+      - new_vlan_group['diff']['after']['state'] == "present"
+      - new_vlan_group['vlan']['name'] == "Test VLAN 500"
+      - new_vlan_group['vlan']['vid'] == 500
+      - new_vlan_group['vlan']['site'] == 1
+      - new_vlan_group['vlan']['group'] == 2
+      - new_vlan_group['msg'] == "vlan Test VLAN 500 created"
 
 - name: "VLAN 5: ASSERT - Delete more than one result"
   netbox.netbox.netbox_vlan:
@@ -125,6 +174,7 @@
     data:
       name: "Test VLAN 500"
       site: Test Site
+      vlan_group: "Test VLAN Group"
     state: absent
   register: test_six
 
